<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical"
    tools:context=".NewTimeActivity">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/black"
        android:padding="10dp"
        android:id="@+id/back"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"

        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:id="@+id/dateText"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mealtime"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textFilter"
        android:digits="0123456789"
        android:text="2"
        android:maxLength="2"
        android:id="@+id/mealtimeText"
        android:layout_marginTop="10dp"
        tools:ignore="MissingConstraints" />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meditating"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textFilter"
        android:digits="0123456789"
        android:text="22"
        android:editable="false"
        android:maxLength="2"
        android:id="@+id/meditatingText"
        android:layout_marginTop="10dp"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="saveEventAction"
        android:id="@+id/saveButton"
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>